# edtear

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  diesel.toml
.github/workflows/: build.yml
.sqlx/: query-02cef6a9339d1d41d9edbbad6d2e0ea973d0d71053769d20ee9d8e9d3176cf67.json  query-04d9df712b31e8de1e0d14fecb772b287dac615433c30f16dd54fc5d23047035.json  query-5404af8224e5db02b7a4e02246fba46ff4c9c2cc71b4892cc8e9b13153d9412e.json  query-566ed8e8603deb6616ee05c05e433f57a58d7001e45127a52bad608acee8bfe2.json  query-5ee8c32c5b72fd13fc8066fa7f4a8be2ee6c8f9c2b7c8334f71e4169da6eaea6.json  query-69a336fdaab5181b0de5cac33d2e5bfc5474780faa9cc500a5c0064ab58c8e1a.json  query-6ad964fb24397a1715f923bd3061af60d760277c71a013b7178e0d040fb146aa.json  query-6eceea9bc10e98919881016b3443a362dd67502e38a72decb2d6500a9ee2cdd3.json  query-70dd0db5e8b4a3a1961a98b9c884804bb9bd82638f9b51cf3b4439e30dc0a048.json  query-8550404c31bb0326b8f38099daafb1ce5c9d8c24747a47a562c483625f5e7eb4.json  query-aaf9274b3b0854869b1423e1c57755356839c43516e6ef8fc17adf29dc92bb84.json  query-d696cf43b8fab2684ed6f66f338f604039d2c18c1952d727624512144ede9dd7.json  query-de5bc8afee1f7fa324f92c9a6206f810c0d110afc8231ddf3f1f47f129fceb8b.json  query-e19252052bc8206dbe836c2bdc86f21a3d723f1f20f8c21822ca8ead9dee6124.json  query-e2e6a2e3128f43ece3f9e236ee681f4c7c0dd327d8a849fbb0e9e0b659cef146.json  query-e8c0c69ec6729a285556e5e6a42c9d1466c5cdfc5a8af706b15e9082f87e243d.json  query-f5d5f359254eead7527783763817f9c4f38f2297778e2f4ecea5b2a6e2d0a2b2.json
migrations/: 1_systems.sql  2_stations.sql  3_markets.sql  4_stations_landingpad_type.sql  6_fix_markets_nullable.sql  7_keep_all_listings.sql  8_index.sql
src/: eddn.rs  edsm.rs  main.rs  market.rs  spansh.rs  stats.rs
