[package]
name = "edtear"
version = "0.1.0"
edition = "2021"

[dependencies]
couch_rs = "0.11.0"
ctrlc = "3.4.5"
eddn = "0.1.0"
# THIS VERSION MUST BE FIXED AT 0.1.0
elite_journal = "0.1.0"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
