[package]
name = "edtear"
version = "0.1.0"
edition = "2021"

[dependencies]
cron = "0.13.0"
ctrlc = "3.4.5"
eddn = "0.1.0"
clap = { version = "4.5.20", features = ["derive"] }
toml = "0.8.19"
env_logger = "0.11.5"
log = "0.4.22"
# edsm-dumps-model = {git = "https://github.com/mattyoung101/edsm-dumps-model"}
edsm-dumps-model = { path = "/home/matt/workspace/edsm-dumps-model" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
indicatif = { version = "0.17.9", features = ["futures", "rayon", "tokio"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
color-eyre = "0.6.3"
sonic-rs = "0.3.17"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
rayon = "1.10.0"
# geozero = { version = "0.14.0", features = ["with-postgis-sqlx", "with-wkb"] }
# geo = { version = "0.29.3", features = ["serde"] }
# wkb = "0.8.0"
