[package]
name = "edtear"
version = "1.4.0"
edition = "2021"

[dependencies]
eddn = "0.1.0"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
edsm-dumps-model = "0.9.1"
# serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
indicatif = { version = "0.17.9", features = ["futures", "rayon", "tokio"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
color-eyre = "0.6.3"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
comfy-table = "7.1.3"
num-format = "0.4.4"
# not on crates.io for some reason
num2english = { git = "https://github.com/trvswgnr/num2english", branch = "main" }
serde = { version = "1.0.217", features = ["derive"] }
